static/style/pastebin.css
#syntaxTable
{
	background: none;
	width: 64em;
}

#syntaxTable tr
{
	border: 1px solid black;
}

#syntaxTable td
{
	padding: 0.3em 1em 0.3em 1em;
	vertical-align: middle;
}

#syntaxTable td.leftSide
{
	border-right-style: none;
}

#syntaxTable td.rightSide
{
	border-left-style: none;
}

#postDescription, #unitDescription
{
	width: 20em;
}

#content
{
	margin: 0;
	padding: 0;
	width: 100%;
	height: 30em;
}

#syntaxTable #contentRow
{
	margin: 0;
	padding: 0;
	border: 0;
}

#contentRow td
{
	margin: 0;
	padding: 1em 0 0 0;
	border: 0;
}

#commonHighlighting, #advancedHighlighting, #expertHighlighting
{
	display: none;
}

